mule-user-guide/v/3.5/creating-flow-objects-and-transformers-using-annotations.adoc
= 使用注释创建流对象和变形金刚

注释现在允许使用流组件上的纯注释来创建流对象。此外，创建Mule变形金刚有一个新的注释，可以更容易地定义和发现自定义变形金刚。

== 假设

本页假定您熟悉Java注释（标有@）。有关注释的简要概述，请参阅 http://docs.oracle.com/javase/tutorial/java/annotations/[Java注释教程]。

== 流程组件的注释

如果您使用流程组件，注释将特别有用，其中注释提供了请求注入功能。这意味着您可以定义从传入方法读取哪些数据，类似于运行时的依赖注入。

当你对组件提出请求时，你可以注入什么样的东西？您可以注入消息负载，然后将其转换为对象。您还可以注入消息标题，附件，对有效负载执行操作（使用xpath注释来描述要从传入文档中获取的节点）。这可以减少需要为配置创建的xml数量，因为现在可以将它全部放入组件中。这使您的配置更加清洁。

== 变形金刚注释

Mule 3.0还引入了用于创建Mule变形金刚的新注释，使其更容易定义和发现自定义变形金刚。

到目前为止，为Mule创建传输需要大量的XML，尽管您希望看到的最重要的事情可能是数据来自哪里以及它去了哪里。 Mule 3.0中的新注释消除了对定义新传输所需的某些xml配置的需求。

[TIP]
使用参数注释时，请记住每个参数都需要注释才能使方法调用起作用。

== 注释参考

[%header,cols="4*"]
|===
| {注解{1}}说明 |输入 |模块
| link:/mule-user-guide/v/3.6/transformer-annotation[@ContainsTransformerMethods]  |表明一个类包含转换器方法（自Mule 3.0.1） |方法 |注释
| link:/mule-user-guide/v/3.6/transformer-annotation[@变压器]  |用于从类方法 |方法 |注释创建Mule转换器
| link:/mule-user-guide/v/3.6/schedule-annotation[@时间表]  |使用简单频率或cron表达式计划执行方法 |方法 |石英
| @ IntegrationBean  |用于将Facebook或Amazon S3等iBean注入组件的依赖注入器注释 |字段 | ibeans
{@ 0}} @MockIntegrationBean  |类似于@IntegrationBean注释，这个可以在测试中用来创建一个ibean的模拟实例，这对于测试bean而言并不需要实际向外部服务发出请求 |字段 | ibeans
| link:/mule-user-guide/v/3.7/lookup-annotation[@抬头]  |依赖注入注释，用于从注册表 |字段，参数 |注释中检索对象
| link:/mule-user-guide/v/3.6/payload-annotation[@Payload]  |一个参数注入注解，可用于使用@Transformer注释定义的组件入口点和转换器方法，该注解控制当前消息负载如何传递给方法通过执行消息有效载荷的自动转换来匹配注释的参数类型 |参数 |注释
| link:/mule-user-guide/v/3.7/inboundheaders-annotation[@InboundHeaders]  |用于组件入口点和转换器方法，用于控制当前消息入站头如何传递给方法。注释支持，映射，列表，单标题和通配符 |参数 |注释
| link:/mule-user-guide/v/3.6/outboundheaders-annotation[@OutboundHeaders]  |用于组件入口点和转换器方法，用于控制当前消息出站标头如何传入方法。用户可以写入此地图以将标题附加到外发邮件 |参数 |注释
| link:/mule-user-guide/v/3.7/inboundattachments-annotation[@InboundAttachments]  |用于组件入口点和转换器方法，用于控制当前消息入站附件如何传入方法。注释支持，映射，列表，单标题和通配符 |参数 |注释
| link:/mule-user-guide/v/3.6/outboundattachments-annotation[@OutboundAttachments]  |用于组件入口点和转换器方法，用于控制当前消息出站附件如何传递到方法中。用户可以写入此地图，以将附件附加到传出消息 |参数 |注释
| link:/mule-user-guide/v/3.7/xpath-annotation[@xpath]  |此注释可用于在消息负载中执行Xpath表达式，并将结果传递给方法。 |参数 | xml
| link:/mule-user-guide/v/3.7/groovy-annotation[@Groovy]  |此注释可用于在消息负载中执行Groovy表达式，并将结果传递给方法。 |参数 |脚本
| link:/mule-user-guide/v/3.6/mule-annotation[@Mule]  |可以用于组件入口点和变换器方法的参数注入注释，此注释可用于执行 link:/mule-user-guide/v/3.7/mule-expression-language-mel[骡子表达]  |参数 |注解
| link:/mule-user-guide/v/3.6/function-annotation[@功能]  |消息有效载荷上的参数注入注释表达式，其结果被传递到方法中，该注释公开了Mule中使用的一组常用函数，例如计数器，UUID生成器，日期和时间戳等 |参数 |注释
|===
